intro text allignment and ourmission changes

--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
                 <h1 class="cirpi-title"><span class="cirpi_text">CIRPI </span>Educational Foundation</h1>
                 <br>
                 <p class="hero-sub-title">
-                    Empowering minds, shaping futures.!
+                    Empowering young minds.!
                 </p>
                 <p class="hero-sub-title">
-                     CIRPI Educational Foundation is dedicated to providing quality education, fostering innovation, and inspiring lifelong learning. 
+                     Shaping futures with quality education and innovation.!
                 </p>
                 <p class="hero-sub-title">
-                    Together, let's build a brighter tomorrow.!
+                    Together, we inspire lifelong learning and build a brighter, better tomorrow for all.!
                 </p>
             </div>
         </section>
@@ -322,17 +322,17 @@
     <div class="container-fluid section OM">
 
         <div class="container-fluid OVM-contain">
-
+ <div class="our-Mission ">
+                        <h1 class="text-center OM-Mission">Our Mission</h1>
+                    </div>
             <div class="row">
                 <div class="col-xl-5 col-md-12 col-sm-12 OV-img-col">
                     <img class="OV-img" src="./images/OV-Mission-1.png" alt="">
                 </div>
 
                 <div class="col-xl-7 col-md-12 col-sm-12">
-                    <div class="our-Mission ">
-                        <h1 class="text-center OM-Mission">Our Mission</h1>
-                    </div>
-                    <h1 class="pt-4 pb-3">Empowering Dreams, Shaping Futures</h1>
+                   
+                    <h1 class="pt-4 pb-3 text-center">Empowering Dreams, Shaping Futures</h1>
                     <p class="our-mission-text">At CIRPI Educational Foundation, we envision a future where no
                         student's
                         potential is limited by
