fixed popup issue

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
     <!-- Donation Popup -->
     <div class="popup" id="popup_donate">
+        <button class="popup-close" onclick="closePopup('popup_donate')">&times;</button>
         <div class="intro-head text-center mb-3">
             <h1 class="vol-head">Support CIRPI Educational Foundation</h1>
             <p class="vol-head1" style="text-align: center;" >Your donation helps us provide educational resources and mentorship.</p>
@@ -82,8 +83,6 @@
 
             <button type="submit" class="donate-btn mb-3">Proceed to Donate</button>
         </form>
-
-        <button class="donate-btn mb-3" onclick="closePopup('popup_donate')">Close</button>
 
 
         <!-- QR Section -->
@@ -114,6 +113,7 @@
 
 
     <div class="popup" id="popup_volunteer">
+        <button class="popup-close" onclick="closePopup('popup_volunteer')">&times;</button>
         <div class="intro-head">
             <h1 class="vol-head">Join as a Volunteer</h1>
             <p class="vol-head1" style="text-align: center;">Fill in the details to become a part of CIRPI Educational Foundation.</p>
@@ -136,8 +136,6 @@
                 <button type="submit" class="donate-btn mb-3 ">Submit</button>
             </form>
         </div>
-
-        <button class="donate-btn cancel-but" onclick="closePopup('popup_volunteer')">Close</button>
     </div>
 
     <!-- DOnate Button -->
