sarath pic added and fixed some names

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 </head>
 
-<body>
+<body class="hide-scrollbar">
     <!-- Navbar -->
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -496,13 +496,13 @@
                 <!-- Ms. Preethi -->
                 <div class="col-xl-3 col-md-6 col-sm-12 OBI-1 gokul-col">
                     <img src="./images/preethi-ad.png" alt="preethi">
-                    <h1>Ms Preethi</h1>
+                    <h1>Mrs Preethi</h1>
                     <p>DELL, Bangalore</p>
                     <button class="btn d-flex justify-content-center" onclick="openPopup('popup_preethi')">Read
                         More</button>
                     <div class="popup" id="popup_preethi">
                         <img class="pop_img" src="./images/preethi-ad.png" alt="preethi">
-                        <h1>Ms Preethi</h1>
+                        <h1>Mrs Preethi</h1>
                         <h3>Advisor</h3>
                         <p>Preethi Damodharan is a highly skilled Software Engineer at Dell Technologies, where she
                             plays a
@@ -592,7 +592,7 @@
                             </div>
                             <div class="col-lg-3 col-md-3 col-sm-6 col-6 mentor-card">
                                 <img src="./images/pooja.png" alt="Mr Ji" class="img-fluid mentor-img">
-                                <h1>MS Pooja</h1>
+                                <h1>Ms Pooja</h1>
                                 <p>Unwitta, Coimbatore</p>
                             </div>
                             <div class="col-lg-3 col-md-3 col-sm-6 col-6 mentor-card">
@@ -623,7 +623,7 @@
                             <div class="col-lg-3 col-md-3 col-sm-6 col-6 mentor-card">
                                 <img src="./images/amrish.png" alt="Mr Amrish" class="img-fluid mentor-img">
                                 <h1>Mr Amrish</h1>
-                                <p>Ericsson, Chennai</p>
+                                <p>Goldman Sachs, Bangalore</p>
                             </div>
 
                             <div class="col-lg-3 col-md-3 col-sm-6 col-6 mentor-card">
@@ -679,7 +679,7 @@
                                 <p>HCL, Chennai</p>
                             </div>
                             <div class="col-lg-3 col-md-3 col-sm-6 col-6 mentor-card">
-                                <img src="./images/sample-logo.png" alt="Mr Amrish" class="img-fluid mentor-img">
+                                <img src="./images/sarath.png" alt="Mr Amrish" class="img-fluid mentor-img">
                                 <h1>Mr Sathis Kumar</h1>
                                 <p>India Post</p>
                             </div>
